--- a/app.css
+++ b/app.css
@@ -35,7 +35,6 @@ img {
 #mainNavbar {
     font-size: 1.5rem;
     font-weight: 100;
-    margin-right: 16px;
 }
 
 #mainNavbar .nav-link {
@@ -59,6 +58,10 @@ img {
     font-weight: 100;
     font-size: 4rem;
     color: #fa9999;
+}
+
+.navbar-toggler-icon {
+    margin-right: 16px;
 }
 
 .navbar.scrolled {
